--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "scripts": {
     "start": "node app.js"
   },
-  "version": "0.0.0-16",
+  "version": "0.0.0-18",
   "engines": {
     "node": "0.10.x"
   },
   "dependencies": {
     "express": "4.5.x",
     "jade": "1.3.x",
-    "stylus": "0.47.x"
+    "stylus": "0.47.x",
+    "nib": "1.0.x"
   }
 }
