--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "4.5.x",
     "jade": "1.3.x",
     "stylus": "0.47.x",
-    "nib": "1.0.x"
+    "nib": "1.0.x",
+    "mongojs": "0.13.x"
   }
 }
