--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "node app.js"
   },
-  "version": "0.0.0-24",
+  "version": "0.0.0-26",
   "engines": {
     "node": "0.10.x"
   },
@@ -13,6 +13,7 @@
     "jade": "1.3.x",
     "stylus": "0.47.x",
     "nib": "1.0.x",
-    "mongojs": "0.13.x"
+    "mongojs": "0.13.x",
+    "body-parser": "1.4.x"
   }
 }
