--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "stylus": "0.47.x",
     "nib": "1.0.x",
     "mongojs": "0.13.x",
-    "body-parser": "1.4.x"
+    "body-parser": "1.4.x",
+    "async": "0.9.x"
   }
 }
