--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
-  "name": "pvc",
-  "subdomain": "skatona-pvc",
-  "scripts": {
-    "start": "node app.js"
-  },
-  "version": "0.0.0-26",
-  "engines": {
-    "node": "0.10.x"
-  },
+  "name": "prosvcons",
+  "version": "0.0.0",
+  "description": "pros and cons tool",
+  "main": "server.js",
   "dependencies": {
-    "express": "4.5.x",
-    "jade": "1.3.x",
-    "stylus": "0.47.x",
-    "nib": "1.0.x",
-    "mongojs": "0.13.x",
-    "body-parser": "1.4.x",
-    "async": "0.9.x"
-  }
+    "async": "^0.9.0",
+    "body-parser": "^1.4.3",
+    "jade": "^1.3.1",
+    "mongojs": "^0.13.0",
+    "express": "^4.5.1",
+    "nib": "^1.0.3",
+    "stylus": "^0.47.1",
+    "jitsu": "^0.13.18"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/shaunkatona/prosvcons.git"
+  },
+  "author": "Shaun Katona",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/shaunkatona/prosvcons/issues"
+  },
+  "homepage": "https://github.com/shaunkatona/prosvcons"
 }
