--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "prosvcons",
   "version": "0.0.0",
-  "description": "pros and cons tool",
+  "description": "prosvcons =========",
   "main": "server.js",
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "^1.4.3",
-    "jade": "^1.3.1",
-    "mongojs": "^0.13.0",
+    "cookie-parser": "^1.3.2",
     "express": "^4.5.1",
+    "express-session": "^1.7.5",
+    "jade": "^1.3.1",
+    "jitsu": "^0.13.18",
+    "mongojs": "^0.13.0",
     "nib": "^1.0.3",
     "stylus": "^0.47.1",
-    "jitsu": "^0.13.18"
+    "passport": "^0.2.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
@@ -22,7 +26,7 @@
     "type": "git",
     "url": "https://github.com/shaunkatona/prosvcons.git"
   },
-  "author": "Shaun Katona",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/shaunkatona/prosvcons/issues"
