--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "^1.4.3",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.2",
     "express": "^4.5.1",
     "express-session": "^1.7.5",
@@ -13,9 +14,9 @@
     "jitsu": "^0.13.18",
     "mongojs": "^0.13.0",
     "nib": "^1.0.3",
-    "stylus": "^0.47.1",
     "passport": "^0.2.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "stylus": "^0.47.1"
   },
   "devDependencies": {},
   "scripts": {
