--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "async": "^0.9.0",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.2",
@@ -14,6 +15,7 @@
     "jitsu": "^0.13.18",
     "mongojs": "^0.13.0",
     "nib": "^1.0.3",
+    "mongoose": "^3.8.14",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
     "stylus": "^0.47.1"
