--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "server.js",
   "dependencies": {
     "async": "^0.9.0",
-    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.4.3",
-    "compression": "^1.0.11",
     "connect-flash": "^0.1.1",
+    "bcrypt-nodejs": "^0.0.3",
     "cookie-parser": "^1.3.2",
+    "compression": "^1.0.11",
     "express": "^4.5.1",
-    "express-session": "^1.7.6",
     "jade": "^1.3.1",
+    "express-session": "^1.7.6",
     "jitsu": "^0.13.18",
+    "minify": "^1.0.1",
     "mongojs": "^0.13.0",
     "mongoose": "^3.8.15",
     "nib": "^1.0.3",
